Javascript Basic Concepts

--- a/Javascript Basic Concepts/index.html
+++ b/Javascript Basic Concepts/index.html
@@ -7,6 +7,6 @@
     <title>Javascript</title>
   </head>
   <body>
-    <script src="alert-confirm-prompt.js"></script>
+    <script src="../Javascript function/$Arrow Function.js"></script>
   </body>
 </html>
